# eInk_dashboard

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  LICENSE  Makefile  README.md  app.py  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: ci.yml
HomeAssistant/: hassCommunicationsCoordinator.py
Html/: htmlGenerator.py  htmlTemplates.py
context/planning/: ha-offline-landing-page.md
context/styling/: formatting.md
docs/superpowers/plans/: 2026-04-05-tests-linter-makefile.md
static/css/: styles.css
tests/: conftest.py  test_app.py  test_constants.py  test_hass_communications.py  test_html_generator.py  test_html_templates.py
utils/: constants.py  constants.py.customize  logger.py
