[project]
name = "eink-dashboard"
version = "0.1.0"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"HomeAssistant/hassCommunicationsCoordinator.py" = ["F403", "F405"]
"Html/htmlTemplates.py" = ["F403", "F405"]

[tool.ruff.format]
indent-style = "space"
